<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    android:background="#ffffd1a4">
    <TableRow>
        <TextView android:text="@string/idCargof"/>
        <EditText
            android:id="@+id/editIdCargof"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <Button android:onClick="consultarCargo"
            android:text="@string/modificarCarf"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombreCargof"/>
        <EditText
            android:id="@+id/editNombreCargof"
            android:inputType="text"
            android:maxLength="60" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcionCargof" />
        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_column="1"
            android:id="@+id/editDescripcionCargof"
            android:maxLength="140" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarCargo"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>


</TableLayout>
