<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/idReferencia" />

        <EditText
            android:id="@+id/editReferencia"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/idEmpleado" />

        <EditText
            android:id="@+id/editIdEmpleado"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/nombreReferencia" />
        <EditText
            android:id="@+id/editNombreReferencia"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>

        <TextView android:text="@string/telefonoReferencia" />

        <EditText
            android:id="@+id/editTelefonoReferencia"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>


    <TableRow>

        <TextView android:text="@string/idEmpresa" />

        <EditText
            android:id="@+id/editIdEmpresa"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="modificarReferenciaAct"
            android:text="@string/actualizar" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>