<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="fia.ues.sv.bolsatrabajo.EmpleadoInsertarActivity">
    <TableRow>
        <TextView android:text="@string/idEmpleado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/editIdEmpleado"
            android:inputType="text"
            android:enabled="false"
            />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nombreEmpleado" />
        <EditText  android:id="@+id/editNombreEmpleado"
                   android:inputType="text"/>
    </TableRow>
    <TableRow>
    <TextView android:text="@string/duiEmpleado"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText android:id="@+id/editDuiEmpleado"
        android:inputType="number"
        android:maxLength="9"/>
</TableRow>
    <TableRow>
        <TextView android:text="@string/sexoEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoF"/>
                <!--android:onClick="onRadioButtonClicked"-->
            <RadioButton android:id="@+id/radio_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexoM"/>
                <!--android:onClick="onRadioButtonClicked"-->
        </RadioGroup>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/edadEmpleado"/>
        <EditText android:id="@+id/editEdadEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="number"/>
    </TableRow>
    <TableRow android:layout_height="fill_parent"
        android:layout_width="fill_parent" >
        <TextView

            android:text="@string/direccionEmpleado"/>

        <EditText android:id="@+id/editDireccionEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text" />
    </TableRow>
    <TableRow android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <TextView
            android:text="@string/telefonoEmpleado"/>

        <EditText android:id="@+id/editTelefonoEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="phone"
            android:maxLength="8"/>
    </TableRow>
    <TableRow android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <TextView
            android:text="@string/cantAplicacionesEmpleado"/>

        <EditText android:id="@+id/editCantApEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:enabled="false"/>
    </TableRow>
    <TableRow >
        <TextView
            android:text="@string/cantReferenciasEmpleado"/>

        <EditText android:id="@+id/editCantRefEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:enabled="false" />
    </TableRow>



    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertar"
            android:id="@+id/buttonInsertarEmpleado"

            android:textAlignment="center" />
        <!-- android:onClick="insertarEmpleado"-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:id="@+id/buttonLimpiarEmpleado"
            android:textAlignment="center" />
            <!--android:onClick="limpiarEmplado"-->

    </TableRow>

</TableLayout>
