<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idAplicacionf"/>
        <EditText
            android:id="@+id/editIdAplicacionf"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/editIdEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"
            android:maxLength="5"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idOfertaLaboralf"/>
        <EditText android:id="@+id/editIdOfertaLaboralf"
            android:inputType="text"
            android:maxLength="5"/>

    </TableRow>
    <TableRow>
        <TextView android:text="@string/idEmpresa"/>
        <EditText android:id="@+id/editIdEmpresa"
            android:inputType="text"
            android:maxLength="5"/>
    </TableRow>
    <TableRow>
        <Button
            android:onClick="consultarAplicacion"
            android:text="@string/consultar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/fechaAplicacionf"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText android:id="@+id/editFechaAplicacionf"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/estadoAplicacionf"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText android:id="@+id/editEstadoAplicacionf"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>

    </TableRow>



</TableLayout>