<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    android:background="#ffc6baff">
    <TableRow>
        <TextView android:text="@string/idAplicacionf"/>
        <EditText
            android:id="@+id/editIdAplicacionf"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/spinnerEmpleado"/>
        <Spinner android:id="@+id/editSpinnerEmpleado"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

    </TableRow>
    <TableRow>
        <TextView android:text="@string/spinnerEmpresa"/>
        <Spinner android:id="@+id/editSpinnerEmpresa"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />
        <!--android:prompt="@string/"-->
    </TableRow>
    <TableRow>
        <TextView android:text="@string/spinnerOferta"/>
        <Spinner android:id="@+id/editSpinnerOferta"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="eliminarAplicacion"
            android:text="@string/eliminar" />
    </TableRow>
</TableLayout>