<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/fechaAplicacionf"/>
        <EditText
            android:id="@+id/editFechaAplicacion"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/estadoAplicacionf" />
        <EditText
            android:id="@+id/editEstadoAplicacion"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <LinearLayout>
        <Button
            android:onClick="actualizarAplicacion"
            android:text="@string/insertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</TableLayout>