<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    android:background="#ffffd1a4">
    <TableRow>
        <TextView android:text="@string/idCargof"/>
        <EditText
            android:id="@+id/editIdCargof"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>


    <TableRow>
        <Button
            android:onClick="eliminarCargo"
            android:text="@string/eliminar"
            android:textAppearance="@style/estiloBotonFB12001" />

    </TableRow>
    <LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/FB12001" />
    </LinearLayout>
</TableLayout>
